Sylvia - Image align + table fix

--- a/SylviasCSS/SylviasStyleSheet.css
+++ b/SylviasCSS/SylviasStyleSheet.css
@@ -29,6 +29,9 @@ td {
     width:"50%";
 }
 /*Changing id class background color*/
+tr {
+    column-span: 2;
+}
 #identified {
     font-weight: bold;
     font-size: large;
@@ -47,6 +50,7 @@ a:hover {
     width: auto;
 }
 #image2 {
-    width: auto;
-    height: auto;
+    width: 25%;
+    height: 25%;
+    align-items: center;
 }
